--- a/SkycamPage/package.json
+++ b/SkycamPage/package.json
@@ -2,7 +2,7 @@
   "thumbnail": "https://wnow-modules.s3.amazonaws.com/icon_stroke_news_articlelist.svg",
   "tag": "NEXGEN",
   "affiliates": [
-    "video"
+    "video","franklydemo"
   ],
   "propTypes": {
     "affiliate": "PropTypes.string"
